--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 test.ipynb
 news_data_2.csv
 Hamshahri.ipynb
-Hamshahrionline.csv
+hamshahrionline.csv
 news_data.csv
-read_news.py
-read_number.py
+Hamshahri.ipynb
